# StuffSwapper-API

./: docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 3897b21d725e_items_fix.py  982755e4f1fb_items.py  ea0fd0f7618b_init.py
api/: __init__.py
api/core/: celery_app.py  config.py
api/core/security/: security.py  utils.py
api/database/: __init__.py  main.py  models.py  redis.py
api/routers/: __init__.py  auth_router.py  chat_router.py  item_router.py
api/schemas/: __init__.py  item.py  user.py
api/services/: __init__.py  auth.py  item.py  vefification.py
api/tasks/: send_email.py
